[ci skip] 43700872926 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/15523966659/job/43700872926

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-08 00:16+0000\n"
+"POT-Creation-Date: 2025-06-08 12:43+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4825,6 +4825,8 @@ msgid ""
 "increasing the degree d. Each learning technique has its own methods of "
 "adding complexity."
 msgstr ""
+"**より洗練されたモデルを使います** 。 モデルに複雑さを加えることで、バイアスを改善することができます。 "
+"多項式フィットの場合、次数dを大きくすることで達成できます。 それぞれの学習技術には、複雑さを加える独自の方法があります。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1685
 msgid ""
@@ -4833,6 +4835,9 @@ msgid ""
 " sample. For algorithms which are computationally expensive, reducing the "
 "training sample size can lead to very large improvements in speed."
 msgstr ""
+"**サンプル数を減らします** 。 "
+"これは分類を改善するものではありませんが、ハイバイアスアルゴリズムは、より少ない訓練サンプルでほぼ同じ誤差を達成することができます。 "
+"計算コストの高いアルゴリズムでは、学習サンプルサイズを小さくすることで、スピードが非常に大きく向上することがあります。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1690
 msgid ""
@@ -4841,6 +4846,9 @@ msgid ""
 "depends on the characteristics of the parameters. If a model has high bias, "
 "decreasing the effect of regularization can lead to better results."
 msgstr ""
+"**正則化を減らします** "
+"。正則化は、パラメータの特性に依存するペナルティ項を追加することによって、いくつかの機械学習モデルに単純さを課すために使用されるテクニックです。 "
+"モデルのバイアスが大きい場合は、正則化の効果を小さくすることで、より良い結果を得ることができます。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1697
 msgid "High Variance"
