[ci skip] 44084112252 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/15646224359/job/44084112252

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-11 00:14+0000\n"
+"POT-Creation-Date: 2025-06-14 00:14+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4894,6 +4894,8 @@ msgid ""
 "particular learning task can inform the observing strategy that the "
 "astronomer employs."
 msgstr ""
+"このような選択は、実社会では非常に重要になります。 "
+"例えば、望遠鏡の使用時間が限られているため、天文学者は多数の天体を観測することと、各天体について多数の特徴を観測することのバランスを追求しなければなりません。特定の学習課題にとってどちらが重要かを判断することで、天文学者が採用する観測戦略に反映させることができます。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1721
 msgid "A last word of caution: separate validation and test set"
