--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-20 00:14+0000\n"
+"POT-Creation-Date: 2025-06-21 14:29+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -2661,7 +2661,7 @@ msgstr "機械学習の形式的問題の単純なイメージ"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/auto_examples/plot_separator.rst:24
 msgid ""
-"This example generates simple synthetic data ploints and shows a separating "
+"This example generates simple synthetic data points and shows a separating "
 "hyperplane on them."
 msgstr ""
 
