[ci skip] 44643430222 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/15837318442/job/44643430222

--- a/locales/ja/LC_MESSAGES/guide.po
+++ b/locales/ja/LC_MESSAGES/guide.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-19 00:14+0000\n"
+"POT-Creation-Date: 2025-06-23 23:27+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -149,6 +149,8 @@ msgid ""
 "Make sure to read this `Documentation style guide`_ as well as these `tips, "
 "tricks`_ and conventions about documentation content and workflows."
 msgstr ""
+"ドキュメントの内容やワークフローについては、この `Documentation style guide`_ だけでなく、この `tips, "
+"tricks`_ や規約も必ずお読みください。"
 
 #: ../../scientific-python-lectures/guide/index.rst:24
 msgid "How to contribute ?"
