--- a/locales/ja/LC_MESSAGES/advanced.po
+++ b/locales/ja/LC_MESSAGES/advanced.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-15 00:16+0000\n"
+"POT-Creation-Date: 2025-06-23 23:27+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -265,7 +265,7 @@ msgstr "0.0"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:11
 msgid "Advanced NumPy"
-msgstr ""
+msgstr "高度なNumPy"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:13
 msgid "**Author**: *Pauli Virtanen*"
