--- a/locales/ja/LC_MESSAGES/intro.po
+++ b/locales/ja/LC_MESSAGES/intro.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-20 00:16+0000\n"
+"POT-Creation-Date: 2025-07-21 00:16+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -478,7 +478,7 @@ msgstr ":ref:`SciPyの章 <scipy>`"
 msgid ""
 "**Matplotlib** : 2-D visualization, \"publication-ready\" plots "
 "https://matplotlib.org/"
-msgstr ""
+msgstr "**Matplotlib** : 2次元可視化、 \"出版可能な\" プロット https://matplotlib.org/"
 
 #: ../../scientific-python-lectures/intro/intro.rst:191
 msgid ":ref:`chapter on matplotlib <matplotlib>`"
@@ -814,7 +814,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/intro/language/basic_types.rst:9
 msgid "Python supports the following numerical, scalar types:"
-msgstr ""
+msgstr "Pythonは、以下の数値型、スカラー型をサポートしています:"
 
 #: ../../scientific-python-lectures/intro/language/basic_types.rst:0
 msgid "Integer"
