[ci skip] 46791960621 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/16545278057/job/46791960621

--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-24 00:15+0000\n"
+"POT-Creation-Date: 2025-07-27 00:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -4533,6 +4533,9 @@ msgid ""
 " tune the *hyperparameter* (here ``d``, the degree of the polynomial) to "
 "give the best fit."
 msgstr ""
+"特定のデータセットとモデル (たとえば多項式) が与えられている場合、予測精度を制限しているのがバイアス (アンダーフィット) "
+"かバリアンスかを理解し、最適な予測を得るために *ハイパーパラメータ* (ここでは多項式の次数 ``d`` ) "
+"をどのように調整すればよいかを検討します。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1433
 msgid ""
@@ -4555,6 +4558,12 @@ msgid ""
 "variance. The reason for the term \"high variance\" is that if any of the "
 "input points are varied slightly, it could result in a very different model."
 msgstr ""
+"上の図では、3つの異なる d の値に対するフィッティング結果を示しています。d = 1 "
+"の場合、データはアンダーフィットされています。これは、モデルが単純すぎることを意味します。どんな直線を引いても、このデータにはうまくフィットしません。このような場合、モデルは高いバイアスを持つと言います。モデル自体が偏っており、その結果としてデータにうまく当てはまらないのです。反対に、"
+" ``d = 6`` の場合はオーバーフィットしています。これは、モデルが持つ自由度  (この場合は6) "
+"が多すぎて、訓練データには完全に一致するものの、新しいデータ点を追加した場合、その点がこの次数-6の曲線から大きく外れてしまう可能性が高いということです。このような場合、モデルは"
+" **高いバリアンス** を持つと言います。 \"高いバリアンス\" "
+"とは、入力データのわずかな変化によって、モデルの予測が大きく変わってしまうことを意味しています。"
 
 #: ../../scientific-python-lectures/packages/scikit-learn/index.rst:1456
 msgid ""
