--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-27 00:17+0000\n"
+"POT-Creation-Date: 2025-08-03 00:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -853,7 +853,7 @@ msgstr "``np.ndarray``"
 
 #: ../../scientific-python-lectures/packages/scikit-image/index.rst:0
 msgid "pixels"
-msgstr ""
+msgstr "ピクセル"
 
 #: ../../scientific-python-lectures/packages/scikit-image/index.rst:49
 msgid "array values: ``a[2, 3]``"
