--- a/locales/ja/LC_MESSAGES/advanced.po
+++ b/locales/ja/LC_MESSAGES/advanced.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-27 23:18+0000\n"
+"POT-Creation-Date: 2025-08-31 00:15+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -8346,7 +8346,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/advanced/optimizing/index.rst:5
 msgid "Optimizing code"
-msgstr ""
+msgstr "コードの最適化"
 
 #: ../../scientific-python-lectures/advanced/optimizing/index.rst-1
 msgid "Donald Knuth"
